<resources>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_fragment_app_name">Tesla Display</string>
    <string name="about_fragment_app_version">Version: %1$s</string>
    <string name="about_fragment_developer_name">Developed by Super Ratel</string>
    <string name="about_fragment_discord">Join our Discord</string>
    <string name="about_fragment_email">Email to author</string>
    <string name="about_fragment_email_chooser_header">Sending email…</string>
    <string name="about_fragment_faq">FAQ</string>
    <string name="about_fragment_license">Used License</string>
    <string name="about_fragment_rate_app">Rate app</string>
    <string name="about_fragment_twitter">"Author's Twitter"</string>
    <string name="about_fragment_upgrade">Upgrade to Pro</string>
    <string name="accept_button">Accept</string>
    <string name="accessibility_declined_text">Because the Accessibility permission is not granted, you CANNOT use the remote control feature now.</string>
    <string name="accessibility_hint">"The Accessibility permission is required when the option Enable remote control is checked. Remote control means you can control your phone remotely on Tesla's touchscreen. To implement this feature, the app uses the dispatchGesture and performGlobalAction interfaces of the AccessibilityService API to perform the actions on your phone based on the actions on Tesla's touchscreen. You need to grant the Accessibility permission to the Tesla Display app. Without this permission, the Remote Control feature will not be available.

The app does not collect any data through the AccessibilityService API.

To grant the app Accessibility permission, you need to accept this prominent disclosure and consent. "</string>
    <string name="accessibility_service_description">Accessibility service is used to simulate touch screen events for remote control of the device.</string>
    <string name="accessibility_title">Prominent Disclosure and Consent</string>
    <string name="accessibility_unavailable_error">Oh, no! Looks like Accessibility services required by Tesla Display are not available on your device! Please contact the developers at https://www.reddit.com/r/tesladisplay/ and report which is your device model. We hope it will be supported in the future and your help is appreciated!</string>
    <string name="android_app_upd_dlg_btn_no_later_txt">Later</string>
    <string name="android_app_upd_dlg_btn_yes_open_new_txt">Open new version</string>
    <string name="android_app_upd_info_popup_text">\"AndroidAppUpdater\" library</string>
    <string name="android_app_upd_internet_update_error">Check your internet connection</string>
    <string name="android_app_upd_play_service_not_found">Install Google Play Services to update application</string>
    <string name="android_app_upd_restricter_info_install">"This is old version and does not operate. An application has moved to new address. 
Please install newer version"</string>
    <string name="android_app_upd_restricter_info_open_new_version">This is old version and does not operate. Please open new version</string>
    <string name="android_app_upd_restricter_info_update">This is old version and does not operate. Please update application</string>
    <string name="android_app_upd_updater_info_install">Application has moved to new address. Please install newer version</string>
    <string name="android_app_upd_updater_info_update">New version is available. Please update application</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_activity_collecting_logs">Collecting application logs…</string>
    <string name="app_activity_floatingaction_button_content_description">Start or Stop button</string>
    <string name="app_activity_send_logs">Send logs to developer</string>
    <string name="app_activity_send_logs_dialog_message">Please add issue description:</string>
    <string name="app_activity_send_logs_dialog_neutral">Stop logging</string>
    <string name="app_activity_send_logs_dialog_title">Send logs in email to developer</string>
    <string name="app_intro_back_button">BACK</string>
    <string name="app_intro_done_button">DONE</string>
    <string name="app_intro_image_content_description">graphics</string>
    <string name="app_intro_next_button">NEXT</string>
    <string name="app_intro_skip_button">SKIP</string>
    <string name="app_name">TeslaDisplay</string>
    <string name="app_update_activity_dialog_message">An update has just been downloaded. Restart app now?</string>
    <string name="app_update_activity_dialog_restart">Restart</string>
    <string name="app_update_activity_dialog_title">Update available</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="banner_ad_id">ca-app-pub-4197847608048079/6063814778</string>
    <string name="bottom_menu_about">About</string>
    <string name="bottom_menu_exit">Exit</string>
    <string name="bottom_menu_settings">Settings</string>
    <string name="bottom_menu_start">Start</string>
    <string name="bottom_menu_stop">Stop</string>
    <string name="bottom_menu_stream">Stream</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_collapse">Collapse the bottom sheet</string>
    <string name="bottomsheet_action_expand">Expand the bottom sheet</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="bottomsheet_drag_handle_clicked">Drag handle double-tapped</string>
    <string name="bottomsheet_drag_handle_content_description">Drag handle</string>
    <string name="button_exit">Exit</string>
    <string name="call_notification_answer_action">Answer</string>
    <string name="call_notification_answer_video_action">Video</string>
    <string name="call_notification_decline_action">Decline</string>
    <string name="call_notification_hang_up_action">Hang Up</string>
    <string name="call_notification_incoming_text">Incoming call</string>
    <string name="call_notification_ongoing_text">Ongoing call</string>
    <string name="call_notification_screening_text">Screening an incoming call</string>
    <string name="cancel">cancel</string>
    <string name="cast_type_choice_title">Choose what to cast</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="cmnd_verb_android_app_upd_dlg_btn_no_close_txt">Close</string>
    <string name="cmnd_verb_android_app_upd_dlg_btn_no_uninstall_old_txt">Uninstall old</string>
    <string name="cmnd_verb_android_app_upd_dlg_btn_yes_install_txt">Install</string>
    <string name="cmnd_verb_android_app_upd_dlg_btn_yes_update_txt">Update</string>
    <string name="com.google.firebase.crashlytics.mapping_file_id">00000000000000000000000000000000</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="copy_toast_msg">Link copied to clipboard</string>
    <string name="decline_button">Decline</string>
    <string name="default_web_client_id">711214827962-di6cr9qbhdug3to0ld7fglmog7bfsee5.apps.googleusercontent.com</string>
    <string name="discord_text">Discord</string>
    <string name="enable_hotspot_message">"To cast contents to Tesla's screen, you should enable the Wi-Fi hotspot first."</string>
    <string name="enable_hotspot_negtive_button">Later</string>
    <string name="enable_hotspot_positive_button">Enable hotspot</string>
    <string name="error_a11y_label">Error: invalid</string>
    <string name="error_exit">Exit</string>
    <string name="item_device_address">Device address:</string>
    <string name="item_device_address_description_copy_address">Copy address</string>
    <string name="item_device_address_description_open_address">Open address</string>
    <string name="item_device_address_description_qr_address">Show address as QR-code</string>
    <string name="item_device_address_description_share_address">Share address</string>
    <string name="pref_crop_dialog_crop_bottom">Crop bottom:</string>
    <string name="pref_crop_dialog_crop_left">Crop left:</string>
    <string name="pref_crop_dialog_crop_right">Crop right:</string>
    <string name="pref_crop_dialog_crop_top">Crop top:</string>
    <string name="pref_crop_dialog_pixels">pixels</string>
    <string name="pref_crop_dialog_warning_message">Crop will be ignored if result is an empty image</string>
</resources>