<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView android:layout_width="fill_parent" android:layout_height="fill_parent" android:fillViewport="true"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout android:orientation="vertical" android:paddingTop="@dimen/fragments_padding_top" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/fragments_margin_bottom">
        <androidx.appcompat.widget.AppCompatTextView android:textAppearance="?android:textAppearanceLarge" android:textColor="@color/textColorSecondary" android:gravity="center" android:id="@id/tv_fragment_about" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:text="@string/about_fragment_app_name" app:layout_constraintTop_toTopOf="parent" />
        <androidx.appcompat.widget.AppCompatTextView android:textColor="@color/textColorSecondary" android:gravity="center" android:id="@id/tv_fragment_about_version" android:padding="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" app:layout_constraintTop_toBottomOf="@id/tv_fragment_about" />
        <androidx.appcompat.widget.AppCompatTextView android:textColor="@color/textColorSecondary" android:gravity="center" android:id="@id/tv_fragment_about_developer" android:padding="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/about_fragment_developer_name" app:layout_constraintTop_toBottomOf="@id/tv_fragment_about_version" />
        <com.google.android.material.button.MaterialButton android:id="@id/b_fragment_about_faq" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/about_fragment_faq" android:paddingStart="16.0dip" android:paddingEnd="16.0dip" app:icon="@drawable/ic_about_faq_24dp" app:iconPadding="8.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/tv_fragment_about_developer" style="@style/Widget.MaterialComponents.Button.TextButton.Dialog.Icon" />
        <com.google.android.material.button.MaterialButton android:id="@id/b_fragment_about_rate" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/about_fragment_rate_app" android:paddingStart="16.0dip" android:paddingEnd="16.0dip" app:icon="@drawable/ic_about_rateapp_24dp" app:iconPadding="8.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/b_fragment_about_faq" style="@style/Widget.MaterialComponents.Button.TextButton.Dialog.Icon" />
        <com.google.android.material.button.MaterialButton android:id="@id/b_fragment_license" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/about_fragment_license" android:paddingStart="16.0dip" android:paddingEnd="16.0dip" app:icon="@drawable/ic_about_license_24dp" app:iconPadding="8.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/b_fragment_about_rate" style="@style/Widget.MaterialComponents.Button.TextButton.Dialog.Icon" />
        <com.google.android.material.button.MaterialButton android:id="@id/b_fragment_about_email" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/about_fragment_email" android:paddingStart="16.0dip" android:paddingEnd="16.0dip" app:icon="@drawable/ic_about_email_24dp" app:iconPadding="8.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/b_fragment_license" style="@style/Widget.MaterialComponents.Button.TextButton.Dialog.Icon" />
        <com.google.android.material.button.MaterialButton android:id="@id/b_fragment_about_twitter" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/about_fragment_twitter" android:paddingStart="16.0dip" android:paddingEnd="16.0dip" app:icon="@drawable/ic_about_twitter_20dp" app:iconPadding="8.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/b_fragment_about_email" style="@style/Widget.MaterialComponents.Button.TextButton.Dialog.Icon" />
        <com.google.android.material.button.MaterialButton android:id="@id/b_fragment_about_discord" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/about_fragment_discord" android:paddingStart="16.0dip" android:paddingEnd="16.0dip" app:icon="@drawable/ic_about_group_24dp" app:iconPadding="8.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/b_fragment_about_twitter" style="@style/Widget.MaterialComponents.Button.TextButton.Dialog.Icon" />
        <com.google.android.material.button.MaterialButton android:id="@id/b_fragment_about_upgrade" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/about_fragment_upgrade" android:paddingStart="16.0dip" android:paddingEnd="16.0dip" app:icon="@drawable/ic_about_upgrade_24dp" app:iconPadding="8.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/b_fragment_about_discord" style="@style/Widget.MaterialComponents.Button.TextButton.Dialog.Icon" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>