<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:background="@color/colorBackgroundSecondary" android:paddingTop="8.0dip" android:paddingBottom="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:paddingStart="16.0dip" android:paddingEnd="16.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.appcompat.widget.AppCompatTextView android:id="@id/tv_item_device_address_header" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/item_device_address" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <androidx.appcompat.widget.AppCompatTextView android:textAppearance="?android:textAppearanceMedium" android:textStyle="bold" android:textColor="@color/colorAccent" android:id="@id/tv_item_device_address" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/tv_item_device_address_header" />
    <androidx.appcompat.widget.AppCompatTextView android:textAppearance="?android:textAppearanceSmall" android:textColor="@color/textColorTertiary" android:gravity="center_vertical" android:id="@id/tv_item_device_address_name" android:layout_width="0.0dip" android:layout_height="wrap_content" android:maxLines="2" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toStartOf="@id/iv_item_device_address_open_external" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/tv_item_device_address" />
    <androidx.appcompat.widget.AppCompatImageView android:id="@id/iv_item_device_address_open_external" android:background="?android:selectableItemBackgroundBorderless" android:padding="8.0dip" android:focusable="true" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:contentDescription="@string/item_device_address_description_open_address" android:layout_marginEnd="16.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toStartOf="@id/iv_item_device_address_copy" app:layout_constraintTop_toBottomOf="@id/tv_item_device_address" app:srcCompat="@drawable/ic_open_in_new_24dp" />
    <androidx.appcompat.widget.AppCompatImageView android:id="@id/iv_item_device_address_copy" android:background="?android:selectableItemBackgroundBorderless" android:padding="8.0dip" android:focusable="true" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:contentDescription="@string/item_device_address_description_copy_address" android:layout_marginStart="16.0dip" android:layout_marginEnd="16.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toStartOf="@id/iv_item_device_address_share" app:layout_constraintTop_toBottomOf="@id/tv_item_device_address" app:srcCompat="@drawable/ic_copy_24dp" />
    <androidx.appcompat.widget.AppCompatImageView android:id="@id/iv_item_device_address_share" android:background="?android:selectableItemBackgroundBorderless" android:padding="8.0dip" android:focusable="true" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:contentDescription="@string/item_device_address_description_share_address" android:layout_marginStart="16.0dip" android:layout_marginEnd="16.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toStartOf="@id/iv_item_device_address_qr" app:layout_constraintTop_toBottomOf="@id/tv_item_device_address" app:srcCompat="@drawable/ic_share_24dp" />
    <androidx.appcompat.widget.AppCompatImageView android:id="@id/iv_item_device_address_qr" android:background="?android:selectableItemBackgroundBorderless" android:padding="8.0dip" android:focusable="true" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:contentDescription="@string/item_device_address_description_qr_address" android:layout_marginStart="16.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toBottomOf="@id/tv_item_device_address" app:srcCompat="@drawable/ic_qrcode_24dp" />
</androidx.constraintlayout.widget.ConstraintLayout>