<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView android:textStyle="bold" android:textColor="@color/colorError" android:gravity="center" android:id="@id/tv_dialog_settings_crop_error_message" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginBottom="16.0dip" android:text="@string/pref_crop_dialog_warning_message" android:layout_marginStart="16.0dip" android:layout_marginEnd="16.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <androidx.constraintlayout.widget.Guideline android:orientation="vertical" android:id="@id/guideline_dialog_settings_crop" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintGuide_percent="0.4" />
    <TextView android:id="@id/tv_dialog_settings_crop_top" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/pref_crop_dialog_crop_top" android:paddingStart="8.0dip" android:paddingEnd="8.0dip" app:layout_constraintBottom_toBottomOf="@id/ti_dialog_settings_crop_top" app:layout_constraintEnd_toStartOf="@id/guideline_dialog_settings_crop" app:layout_constraintTop_toTopOf="@id/ti_dialog_settings_crop_top" />
    <com.google.android.material.textfield.TextInputLayout android:gravity="start|center" android:id="@id/ti_dialog_settings_crop_top" android:layout_width="96.0dip" android:layout_height="wrap_content" android:layout_marginTop="4.0dip" app:hintEnabled="false" app:layout_constraintStart_toEndOf="@id/guideline_dialog_settings_crop" app:layout_constraintTop_toBottomOf="@id/tv_dialog_settings_crop_error_message">
        <com.google.android.material.textfield.TextInputEditText android:id="@id/tiet_dialog_settings_crop_top" android:layout_width="fill_parent" android:layout_height="wrap_content" android:singleLine="true" android:maxLength="6" android:inputType="number" android:imeOptions="flagNoExtractUi" />
    </com.google.android.material.textfield.TextInputLayout>
    <TextView android:id="@id/tv_dialog_settings_crop_top_pixels" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/pref_crop_dialog_pixels" android:paddingStart="8.0dip" android:paddingEnd="8.0dip" app:layout_constraintBottom_toBottomOf="@id/ti_dialog_settings_crop_top" app:layout_constraintStart_toEndOf="@id/ti_dialog_settings_crop_top" app:layout_constraintTop_toTopOf="@id/ti_dialog_settings_crop_top" />
    <TextView android:id="@id/tv_dialog_settings_crop_bottom" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/pref_crop_dialog_crop_bottom" android:paddingStart="8.0dip" android:paddingEnd="8.0dip" app:layout_constraintBottom_toBottomOf="@id/ti_dialog_settings_crop_bottom" app:layout_constraintEnd_toStartOf="@id/guideline_dialog_settings_crop" app:layout_constraintTop_toTopOf="@id/ti_dialog_settings_crop_bottom" />
    <com.google.android.material.textfield.TextInputLayout android:gravity="start|center" android:id="@id/ti_dialog_settings_crop_bottom" android:layout_width="96.0dip" android:layout_height="wrap_content" android:layout_marginTop="4.0dip" android:layout_marginBottom="4.0dip" app:hintEnabled="false" app:layout_constraintStart_toEndOf="@id/guideline_dialog_settings_crop" app:layout_constraintTop_toBottomOf="@id/ti_dialog_settings_crop_top">
        <com.google.android.material.textfield.TextInputEditText android:id="@id/tiet_dialog_settings_crop_bottom" android:layout_width="fill_parent" android:layout_height="wrap_content" android:singleLine="true" android:maxLength="6" android:inputType="number" android:imeOptions="flagNoExtractUi" />
    </com.google.android.material.textfield.TextInputLayout>
    <TextView android:id="@id/tv_dialog_settings_crop_top_bottom" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/pref_crop_dialog_pixels" android:paddingStart="8.0dip" android:paddingEnd="8.0dip" app:layout_constraintBottom_toBottomOf="@id/ti_dialog_settings_crop_bottom" app:layout_constraintStart_toEndOf="@id/ti_dialog_settings_crop_bottom" app:layout_constraintTop_toTopOf="@id/ti_dialog_settings_crop_bottom" />
    <TextView android:id="@id/tv_dialog_settings_crop_left" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/pref_crop_dialog_crop_left" android:paddingStart="8.0dip" android:paddingEnd="8.0dip" app:layout_constraintBottom_toBottomOf="@id/ti_dialog_settings_crop_left" app:layout_constraintEnd_toStartOf="@id/guideline_dialog_settings_crop" app:layout_constraintTop_toTopOf="@id/ti_dialog_settings_crop_left" />
    <com.google.android.material.textfield.TextInputLayout android:gravity="start|center" android:id="@id/ti_dialog_settings_crop_left" android:layout_width="96.0dip" android:layout_height="wrap_content" android:layout_marginTop="4.0dip" android:layout_marginBottom="4.0dip" app:hintEnabled="false" app:layout_constraintStart_toEndOf="@id/guideline_dialog_settings_crop" app:layout_constraintTop_toBottomOf="@id/ti_dialog_settings_crop_bottom">
        <com.google.android.material.textfield.TextInputEditText android:id="@id/tiet_dialog_settings_crop_left" android:layout_width="fill_parent" android:layout_height="wrap_content" android:singleLine="true" android:maxLength="6" android:inputType="number" android:imeOptions="flagNoExtractUi" />
    </com.google.android.material.textfield.TextInputLayout>
    <TextView android:id="@id/tv_dialog_settings_crop_top_left" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/pref_crop_dialog_pixels" android:paddingStart="8.0dip" android:paddingEnd="8.0dip" app:layout_constraintBottom_toBottomOf="@id/ti_dialog_settings_crop_left" app:layout_constraintStart_toEndOf="@id/ti_dialog_settings_crop_left" app:layout_constraintTop_toTopOf="@id/ti_dialog_settings_crop_left" />
    <TextView android:id="@id/tv_dialog_settings_crop_right" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/pref_crop_dialog_crop_right" android:paddingStart="8.0dip" android:paddingEnd="8.0dip" app:layout_constraintBottom_toBottomOf="@id/ti_dialog_settings_crop_right" app:layout_constraintEnd_toStartOf="@id/guideline_dialog_settings_crop" app:layout_constraintTop_toTopOf="@id/ti_dialog_settings_crop_right" />
    <com.google.android.material.textfield.TextInputLayout android:gravity="start|center" android:id="@id/ti_dialog_settings_crop_right" android:layout_width="96.0dip" android:layout_height="wrap_content" android:layout_marginTop="4.0dip" android:layout_marginBottom="4.0dip" app:hintEnabled="false" app:layout_constraintStart_toEndOf="@id/guideline_dialog_settings_crop" app:layout_constraintTop_toBottomOf="@id/ti_dialog_settings_crop_left">
        <com.google.android.material.textfield.TextInputEditText android:id="@id/tiet_dialog_settings_crop_right" android:layout_width="fill_parent" android:layout_height="wrap_content" android:singleLine="true" android:maxLength="6" android:inputType="number" android:imeOptions="flagNoExtractUi" />
    </com.google.android.material.textfield.TextInputLayout>
    <TextView android:id="@id/tv_dialog_settings_crop_top_right" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/pref_crop_dialog_pixels" android:paddingStart="8.0dip" android:paddingEnd="8.0dip" app:layout_constraintBottom_toBottomOf="@id/ti_dialog_settings_crop_right" app:layout_constraintStart_toEndOf="@id/ti_dialog_settings_crop_right" app:layout_constraintTop_toTopOf="@id/ti_dialog_settings_crop_right" />
</androidx.constraintlayout.widget.ConstraintLayout>